--- a/style.css
+++ b/style.css
@@ -4,12 +4,101 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
-body{
+body {
     font-family: 'Poppins', sans-serif;
+    max-width: 1140px;
+    width: 100%;
+    margin: 0 auto;
+    background-color: #ffffff;
+}
+
+/* header  */
+nav {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    height: 87px;
+}
+
+.nav-ber ul {
+    list-style: none;
+    display: flex;
+    gap: 34px;
+}
+
+/* banner  */
+.banner {
+    display: flex;
+    align-items: center;
+}
+
+.banner-left{
+    /* width: 50%; */
+}
+
+.banner-left>h1 {
+    font-weight: 700;
+    font-size: 48px;
+    color: #3A3A3A;
+}
+
+.banner-left>p {
+    font-weight: 600;
+    font-size: 16px;
+    color: #3A3A3A;
+    width: 75%;
+    margin: 16px 0;
+}
+.banner-right {
+    border: 1px solid #d4d2d8;
+    border-radius: 50%;
+    width: 50%;
+    position: relative;
+}
+.banner-btn{
+    padding: 15px 35px 15px 25px;
+    background-color: #E02C6D;
+    border-radius: 41px;
+    border: 0;
+    color: #FFFFFF;
+    font-weight: 700;
+}
+
+.background-circle{
+    height: 350px;
+    width: 350px;
+    background-color: #f7f0ff;
+    position: absolute;
+    top: 10%;
+    left: 10%;
+    border-radius: 50%;
+    z-index: -1;
+}
+
+
+
+
+@media only screen and (max-width: 576px) {
+    .banner{
+        flex-direction: column-reverse;
+    }
+    .banner-left{
+        text-align: center;
+        margin-bottom: 20px;
+    }
+    .banner-right{
+        width: 100%;
+    }
+    .banner-right>img{
+        width: 100%;
+    }
+   nav ul{
+    flex-direction: column;
+   }
 }
