company added responsive

--- a/style.css
+++ b/style.css
@@ -89,7 +89,8 @@ nav {
     display: flex;
     justify-content: space-between;
     padding: 40px 0;
-    border: 1px solid red;
+    border-top: 1px solid rgb(226, 217, 217);
+    border-bottom: 1px solid rgb(226, 214, 214);
     align-items: center;
     margin-top: 10px;
     flex-wrap: wrap;
